# stellarvallum

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  SECURITY_DEPENDENCIES.md  stellarvallum.code-workspace
.github/workflows/: ci.yml
config/: vallum.toml
docs/architecture/: ARCHITECTURE.md
docs/guides/: GETTING_STARTED.md
docs/steering/: GOVERNANCE.md  README.md  ROADMAP.md
docs/steering/DECISIONS/: 001-testnet-first.md  002-ai-agnostic.md  003-no-ai-default.md  004-openrouter-binding.md
scripts/: setup.sh
src/: chain.rs  config.rs  dashboard.rs  main.rs  secret.rs  spear.rs
src/ai/: local.rs  mod.rs  no_ai.rs  openrouter.rs
src/network/: address.rs  mod.rs  rpc.rs
src/shield/: heuristics.rs  mod.rs  profiles.rs  secrets.rs
src/utils/: csv.rs  csv_sanitizer.rs  mod.rs  path.rs  path_validator.rs
